# warpstate

./: .gitignore  AUDIT_FINDINGS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PERFORMANCE_AUDIT_ROUND3_SUMMARY.md  README.md
.github/workflows/: ci.yml
core/: ADVERSARIAL_AUDIT_CPU.md  ADVERSARIAL_AUDIT_STREAMING.md  ADVERSARIAL_FINDINGS_STREAMING.txt  AUDIT.md  Cargo.toml  GPU_ENSEMBLE_SPEC.md  LICENSE  README.md
core/benches/: benchmarks.rs  compact_dfa.rs  cpu_scan.rs  cpu_vs_gpu.rs  criterion_benches.rs  dfa_huge_pages.rs  gpu_batching.rs  gpu_vs_cpu.rs  regression.rs  threshold.rs  throughput.rs
core/examples/: basic.rs  dump_dfa.rs  dup_test.rs  quick_bench.rs  test_beta.rs  test_dfa.rs  test_mod.rs  test_regex_automata.rs  test_regex_automata2.rs  test_regex_automata3.rs  test_regex_automata4.rs  test_throughput.rs
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_compiled_index.rs  fuzz_dfa_compile.rs  fuzz_scan.rs
core/proptest-regressions/: property_tests.txt
core/proptest-regressions/compiled_index/adversarial_tests/: proptest_roundtrip_preserves_scan_results.txt
core/src/: batch.rs  config.rs  dma.rs  error.rs  fused.rs  gpu_dfa.rs  gpu_scanner.rs  hash_scan.rs  lib.rs  literal_prefilter.rs  matcher.rs  multi_gpu.rs  pipeline.rs  regex_engine.rs  router.rs  scanner.rs  shader.rs  shader_hash.rs  shader_smem.rs  specialize.rs  stream.rs
core/src/algebraic/: AUDIT_REPORT.md  mod.rs  pipeline.rs  readback.rs  scan.rs  shader.rs  tests.rs
core/src/compiled_index/: adversarial_tests.rs  builder.rs  mod.rs  query.rs  tests.rs
core/src/compiled_index/adversarial_tests/: empty_pattern_set_errors_on_build.rs  invalid_utf8_in_name_detected.rs  large_pattern_set_100k_does_not_oom.rs  load_future_version_errors.rs  load_literal_count_mismatch_detected.rs  load_literal_count_zero_with_offsets.rs  load_max_version_errors.rs  load_offset_overflow_detected.rs  load_offset_past_packed_bytes_detected.rs  load_truncated_at_various_boundaries.rs  load_truncated_header_fields.rs  load_version_zero_errors.rs  load_wrong_magic_bytes_errors.rs  medium_pattern_set_10k_roundtrip.rs  mixed_literals_and_regex_roundtrip.rs  multiple_patterns_with_null_bytes.rs  names_count_mismatch_detected.rs  negative_length_prefixed_fields.rs  null_bytes_pattern_roundtrip.rs  overlapping_patterns_preserved.rs  oversized_packed_bytes_length_detected.rs  pattern_count_mismatch_detected.rs  pattern_ending_with_null.rs  pattern_starting_with_null.rs  proptest_roundtrip_preserves_scan_results.rs  round_trip_case_insensitive_results_identical.rs  round_trip_literal_and_regex_results_identical.rs  single_literal_optimization_preserved.rs  to_pattern_set_rebuilds_correctly.rs  trailing_bytes_rejected.rs  unicode_literals_preserved.rs  very_long_literal_pattern.rs
core/src/cpu/: mod.rs  scan.rs
core/src/dfa/: builder.rs  jit_bridge.rs  mod.rs  scan.rs
core/src/gpu/: builder.rs  device.rs  dispatch.rs  ensemble.rs  ensemble_shader.wgsl  mod.rs  readback.rs  scanner.rs  shader.rs  tests.rs
core/src/gpu_smem/: mod.rs  scan.rs  state.rs
core/src/pattern/: compiler.rs  ir.rs  mod.rs
core/src/persistent/: mod.rs  scan.rs  state.rs
core/src/rolling_hash/: kernel.rs  mod.rs  readback.rs
core/tests/: adversarial_audit_cpu.rs  adversarial_cpu.rs  adversarial_exhaustive.rs  adversarial_gpu.rs  adversarial_jules.rs  adversarial_matching.rs  adversarial_pattern_set.rs  adversarial_suite.rs  correctness_guarantees.rs  gpu_batch.rs  gpu_scale.rs  harness_exhaustive.rs  impossible_conditions.rs  jit_parity.rs  keyhog_integration.rs  legendary_correctness.rs  legendary_jules.rs  loom.rs  mass_pattern_samples.rs  p0_ac_automaton_false_negative.rs  parity.rs  property.proptest-regressions  proptest_parity.proptest-regressions  proptest_parity.rs  proptest_scan.rs  specialize_parity.rs  structural.rs  test_legendary_suite.rs
core/tests/adversarial/: adversarial_exhaustive.rs  adversarial_gpu.rs  adversarial_matching.rs  adversarial_pattern_set.rs  adversarial_suite.rs  break_it.rs  mod.rs
core/tests/adversarial/boundary/: mod.rs
core/tests/adversarial/injection/: mod.rs
core/tests/adversarial/overflow/: mod.rs
core/tests/adversarial/unicode/: mod.rs
core/tests/concurrent/: mod.rs
core/tests/concurrent/contention/: mod.rs
core/tests/concurrent/stress/: mod.rs
core/tests/crash/corruption/: mod.rs
core/tests/crash/disk_full/: mod.rs
core/tests/crash/partial_write/: mod.rs
core/tests/crash/power_failure/: mod.rs
core/tests/crash/wal_recovery/: mod.rs
core/tests/integration/: keyhog_integration.rs  mod.rs
core/tests/property/: mod.rs  property_suite.rs  proptest_scan.proptest-regressions  proptest_scan.rs
core/tests/regression/: mod.rs
core/tests/unit/: concurrent_suite.rs  fused.rs  gpu_scale.rs  gpu_scanner.rs  harness_regex.rs  jit_parity.rs  legendary_correctness.rs  legendary_jules.rs  loom.rs  manual_parity.rs  mass_pattern_samples.rs  mod.rs  p0_regression_pattern_drop.rs  parity.rs  regression_suite.rs  specialize_parity.rs  surge_regex_regression.rs
