[package]
name = "warpstate"
description = "GPU-accelerated multi-pattern matching — run thousands of literals on GPU via wgpu compute shaders"
readme = "README.md"
keywords = ["gpu", "pattern-matching", "aho-corasick", "wgpu", "dfa"]
categories = ["algorithms", "text-processing", "concurrency"]
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/santhsecurity/Santh"
authors = ["Corum Collective LLC <contact@santh.io>"]
homepage = "https://github.com/santhsecurity/Santh/tree/main/libs/performance/matching/warpstate"
documentation = "https://docs.rs/warpstate"


[dependencies]
arc-swap = "1"
bufpool = { version = "0.1",  path = "../../../memory/bufpool", optional = true  }
matchkit.workspace = true
wgpu = { version = "24", optional = true }
aho-corasick = "1"
dfajit = { version = "0.1",  path = "../../../matching/dfajit", optional = true  }
memchr = "2"
regex-automata = "0.4.14"
bytemuck = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
libc = "0.2"
parking_lot = "0.12"
regex = "1"
regex-syntax = "0.8"
async-trait = "0.1"
crossbeam-queue = "0.3.12"
tokio = { version = "1", features = ["rt", "time"] }
pollster = { version = "0.4", optional = true }
smallvec = "1"
ebpfsieve = { version = "0.1",  path = "../../../kernel/ebpfsieve", optional = true  }
simdsieve = { version = "0.1",  path = "../../../matching/simdsieve", optional = true  }
cudagrep = { version = "0.1", path = "../../../gpu/cudagrep", optional = true }

[features]
default = ["gpu", "jit", "fused", "pooled-buffers"]
gpu = ["dep:wgpu", "dep:pollster"]
software-gpu = ["gpu"]
jit = ["dep:dfajit"]
pooled-buffers = ["dep:bufpool"]
fused = ["dep:ebpfsieve", "dep:simdsieve"]
gpu-direct = ["dep:cudagrep", "gpu"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
proptest = "1.4.0"

[[bench]]
name = "cpu_scan"
harness = false

[[bench]]
name = "cpu_vs_gpu"
harness = false

[[bench]]
name = "criterion_benches"
harness = false

[[bench]]
name = "dfa_huge_pages"
harness = false

[[bench]]
name = "compact_dfa"
harness = false

[[bench]]
name = "throughput"
harness = false

[[test]]
name = "break_it"
path = "tests/adversarial/break_it.rs"

[lints.clippy]
# Performance-critical matching engine — inline_always is intentional
inline_always = "allow"
# DFA states are u32 by design, never exceeds u32::MAX
cast_possible_truncation = "allow"
# Complex internal types are acceptable in a pattern matching engine
type_complexity = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
# Manual loops with counters are sometimes clearer for DFA traversal
explicit_counter_loop = "allow"
# Dead code exists behind feature gates
# Match arm dedup is intentional for clarity in state machines
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Override workspace denies for internal expect() usage
expect_used = "allow"
module_name_repetitions = "allow"

[[test]]
name = "unit_concurrent_suite"
path = "tests/unit/concurrent_suite.rs"

[[test]]
name = "unit_fused"
path = "tests/unit/fused.rs"

[[test]]
name = "unit_gpu_batch"
path = "tests/unit/gpu_batch.rs"

[[test]]
name = "unit_gpu_scale"
path = "tests/unit/gpu_scale.rs"

[[test]]
name = "unit_gpu_scanner"
path = "tests/unit/gpu_scanner.rs"

[[test]]
name = "unit_harness_exhaustive"
path = "tests/unit/harness_exhaustive.rs"

[[test]]
name = "unit_harness_regex"
path = "tests/unit/harness_regex.rs"

[[test]]
name = "unit_impossible_conditions"
path = "tests/unit/impossible_conditions.rs"

[[test]]
name = "unit_jit_parity"
path = "tests/unit/jit_parity.rs"

[[test]]
name = "unit_legendary_correctness"
path = "tests/unit/legendary_correctness.rs"

[[test]]
name = "unit_legendary_jules"
path = "tests/unit/legendary_jules.rs"

[[test]]
name = "unit_loom"
path = "tests/unit/loom.rs"

[[test]]
name = "unit_manual_parity"
path = "tests/unit/manual_parity.rs"

[[test]]
name = "unit_mass_pattern_samples"
path = "tests/unit/mass_pattern_samples.rs"

[[test]]
name = "unit"
path = "tests/unit/mod.rs"

[[test]]
name = "unit_p0_ac_automaton_false_negative"
path = "tests/unit/p0_ac_automaton_false_negative.rs"

[[test]]
name = "unit_p0_regression_pattern_drop"
path = "tests/unit/p0_regression_pattern_drop.rs"

[[test]]
name = "unit_parity"
path = "tests/unit/parity.rs"

[[test]]
name = "unit_parity_suite"
path = "tests/unit/parity_suite.rs"

[[test]]
name = "unit_regression_suite"
path = "tests/unit/regression_suite.rs"

[[test]]
name = "unit_specialize_parity"
path = "tests/unit/specialize_parity.rs"

[[test]]
name = "unit_structural"
path = "tests/unit/structural.rs"

[[test]]
name = "unit_structural_suite"
path = "tests/unit/structural_suite.rs"

[[test]]
name = "unit_test_legendary_suite"
path = "tests/unit/test_legendary_suite.rs"

[[test]]
name = "adversarial_adversarial_audit_cpu"
path = "tests/adversarial/adversarial_audit_cpu.rs"

[[test]]
name = "adversarial_adversarial_cpu"
path = "tests/adversarial/adversarial_cpu.rs"

[[test]]
name = "adversarial_adversarial_exhaustive"
path = "tests/adversarial/adversarial_exhaustive.rs"

[[test]]
name = "adversarial_adversarial_gpu"
path = "tests/adversarial/adversarial_gpu.rs"

[[test]]
name = "adversarial_adversarial_jules"
path = "tests/adversarial/adversarial_jules.rs"

[[test]]
name = "adversarial_adversarial_matching"
path = "tests/adversarial/adversarial_matching.rs"

[[test]]
name = "adversarial_adversarial_pattern_set"
path = "tests/adversarial/adversarial_pattern_set.rs"

[[test]]
name = "adversarial_adversarial_suite"
path = "tests/adversarial/adversarial_suite.rs"

[[test]]
name = "adversarial"
path = "tests/adversarial/mod.rs"

[[test]]
name = "integration_keyhog_integration"
path = "tests/integration/keyhog_integration.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "property"
path = "tests/property/mod.rs"

[[test]]
name = "property_property_suite"
path = "tests/property/property_suite.rs"

[[test]]
name = "property_proptest_parity"
path = "tests/property/proptest_parity.rs"

[[test]]
name = "property_proptest_scan"
path = "tests/property/proptest_scan.rs"

